--- a/index.html
+++ b/index.html
@@ -1,10 +1,29 @@
-<!DOCTYPE html>
-<html lang="en" dir="ltr">
-  <head>
-    <meta charset="utf-8">
-    <title> 教授</title>
-  </head>
-  <body>
 
-  </body>
+<html>
+<head>
+<meta charset="UTF-8">
+<title>プライバシーポリシー</title>
+</head>
+<body>
+EasterEggs（以下「当方」）は、以下のとおり個人情報保護方針を定め、個人情報保護の仕組みを構築し、個人情報の保護を推進致します。<br>
+<h4>個人情報の管理</h4>
+当社は、お客さまの個人情報への不正アクセス・紛失・破損・改ざん・漏洩などを防止するため、セキュリティシステムの維持・管理体制の整備・社員教育の徹底等の必要な措置を講じ、安全対策を実施し個人情報の厳重な管理を行ないます。<br>
+
+<h4>個人情報の利用目的</h4>
+お客さまからお預かりした個人情報は、当方の提供するアプリでのみ利用されます。<br>
+
+<h4>個人情報の安全対策</h4>
+当方は、個人情報の正確性及び安全性確保のために、セキュリティに万全の対策を講じています。<br>
+
+<h4>法令、規範の遵守と見直し</h4>
+当方は、保有する個人情報に関して適用される日本の法令、その他規範を遵守するとともに、本ポリシーの内容を適宜見直し、その改善に努めます。<br>
+
+<h4>免責事項</h4>
+当方は提供するアプリについて細心の注意を払っておりますが、アプリの利用によって発生したいかなる結果についても一切責任を負わないものとします。
+
+<h4>お問い合せ</h4>
+当方の個人情報の取扱に関するお問い合せは下記までご連絡ください。<br>
+dev.tenote@gmail.com
+
+</body>
 </html>
